updates tests