@@ -5,6 +5,7 @@ import java.io.FileNotFoundException;
 import java.io.IOException;
 import java.io.InputStream;
 import java.util.Arrays;
+import java.util.List;
 import java.util.Properties;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -18,7 +19,7 @@ import com.microsoft.playwright.Playwright;
 
 public class PlaywrightFactory {
 
-	private static Playwright playwright;
+	private static final Playwright playwright;
 
 	// Initiate UI Component
 	private static Browser browser;
@@ -26,8 +27,8 @@ public class PlaywrightFactory {
 	private static Page page;
 
 	// Initiate API Component
-	private static APIRequest request;
-	private static APIRequestContext requestContext;
+	private static final APIRequest request;
+	private static final APIRequestContext requestContext;
 
 	private static InputStream inputStream;
 	private static Properties prop;
@@ -46,24 +47,24 @@ public class PlaywrightFactory {
 		prop = initProp();
 
 		String browserName = prop.getProperty("browser").trim();
-		System.out.println(String.format("Browser Name: %s", prop.getProperty("browser")));
+		System.out.printf("Browser Name: %s%n", prop.getProperty("browser"));
 
 		switch (browserName) {
 		case "chromium":
 			browser = playwright.chromium().launch(
-					new BrowserType.LaunchOptions().setArgs(Arrays.asList("--start-maximized")).setHeadless(false));
+					new BrowserType.LaunchOptions().setArgs(List.of("--start-maximized")).setHeadless(false));
 			break;
 		case "firefox":
 			browser = playwright.firefox().launch(
-					new BrowserType.LaunchOptions().setArgs(Arrays.asList("--start-maximized")).setHeadless(false));
+					new BrowserType.LaunchOptions().setArgs(List.of("--start-maximized")).setHeadless(false));
 			break;
 		case "safari":
 			browser = playwright.webkit().launch(
-					new BrowserType.LaunchOptions().setArgs(Arrays.asList("--start-maximized")).setHeadless(false));
+					new BrowserType.LaunchOptions().setArgs(List.of("--start-maximized")).setHeadless(false));
 			break;
 		case "chrome":
 			browser = playwright.chromium().launch(new BrowserType.LaunchOptions().setChannel("chrome")
-					.setArgs(Arrays.asList("--start-maximized")).setHeadless(false));
+					.setArgs(List.of("--start-maximized")).setHeadless(false));
 			break;
 		default:
 			System.out.println("Please Provide A Valid Browser Name ...");
@@ -73,7 +74,7 @@ public class PlaywrightFactory {
 		browserContext = browser.newContext();
 		page = browserContext.newPage();
 
-		System.out.println(String.format("** Opening Website: %s", prop.getProperty("etsy_home").trim()));
+		System.out.printf("** Opening Website: %s%n", prop.getProperty("etsy_home").trim());
 		page.navigate(prop.getProperty("etsy_home"));
 
 		return page;
@@ -87,10 +88,10 @@ public class PlaywrightFactory {
 			prop = new Properties();
 			prop.load(inputStream);
 		} catch (FileNotFoundException e) {
-			System.out.println(String.format("** FileNotFoundException: ", e));
+			System.out.printf("** FileNotFoundException: %n", e);
 			e.printStackTrace();
 		} catch (IOException e) {
-			System.out.println(String.format("** IOEception: ", e));
+			System.out.printf("** IOEception: %n", e);
 			e.printStackTrace();
 		}
 		return prop;
